# terminal-qrcode

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.en.md  README.md  pyproject.toml  setup.py
.github/: release-notes-prompt.md
.github/prompts/: release-notes.prompt.yml
.github/scripts/: build_release_note_prompt.py  render_release_notes.py  validate_wheel_smoke.py  vendor-linux.sh  vendor-macos.sh  vendor-windows.ps1
.github/workflows/: release.yml  testing.yml
scripts/: cli.py  install-dev.py
src/native/: _cimage.c
src/terminal_qrcode/: __init__.py  __main__.py  _cimage.c  _cimage.pyi  _codecs.py  _contracts.py  _core.py  _crestore.c  _crestore.pyi  _layout.py  _probe.py  _qr_restore.py  _renderers.py  _restore.py  _simple_image.py  codecs.py  contracts.py  core.py  layout.py  probe.py  qr_restore.py  renderers.py  simple_image.py
tests/: conftest.py  test_api.py  test_api_draw.py  test_api_generate.py  test_canonical_render.py  test_cli_main.py  test_codecs_turbojpeg.py  test_image.py  test_image_simple.py  test_integration.py  test_probe.py  test_probe_terminal.py  test_qrcode_images.py  test_render.py  test_renderer_selection.py  test_renderers_core.py
tools/: __init__.py  bootstrap_deps.py
tools/bootstrap/: __init__.py  windows.py
