[project]
name = "terminal-qrcode"
description = "A terminal image renderer with support for iTerm2, Kitty and fallback modes."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Luren", email = "68656403+luren-dc@users.noreply.github.com" }
]
scripts = { "terminal-qrcode" = "terminal_qrcode.__main__:main" }
dependencies = [
  "colorama>=0.4.6",
  "qrcode>=8.2",
]
dynamic = ["version"]

[dependency-groups]
dev = [
  { include-group = "integration" },
  { include-group = "lint" },
  { include-group = "test" },
]
integration = [
  "pillow>=12.1.1",
  "qrcode>=8.2",
  "rich>=14.3.3",
]
lint = [
  "pre-commit>=4.5.1",
  "pyrefly>=0.55.0",
  "ruff>=0.15.5",
]
test = [
  "pytest>=9.0.2",
  "setuptools>=82.0.0",
]

[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build-frontend = "build[uv]"
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64", "i686"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.commitizen]
name = "cz_gitmoji"

[tool.pyrefly]
project-includes = [
  "src",
  "tests",
]
python-version = "3.10"
python-platform = "All"
replace-imports-with-any = ["rich"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "N",
  "UP",
  "B",
  "A",
  "D",
  "C4",
  "T20",
  "RET",
]
ignore = [
  "D203",
  "D212",
]
per-file-ignores = { "scripts/*" = [
  "D100",
  "D104",
  "T201",
], ".github/*" = [
  "D100",
  "D104",
  "T201",
] }

[tool.setuptools]
include-package-data = false

[tool.setuptools.package-data]
terminal_qrcode = [
  "*.pyi",
]

[tool.setuptools.dynamic]
version = { attr = "terminal_qrcode.__version__" }

[tool.uv]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "src/terminal_qrcode/*.c" },
  { file = "setup.py" },
]
